# xalChurchOnline

./: .gitignore  .gitmodules
client/: package-lock.json  package.json
client/public/: index.html
client/scripts/: babel.config.js  postcss.config.js  webpack.config.js
client/src/: App.jsx  index.js
client/src/components/: Component.jsx  Menu.jsx  Module.jsx  TopBar.jsx
client/src/data/: Routes.js  ScreenSize.js
client/src/modules/app_status/components/: ServerStatusCircle.jsx  ServerStatusModule.jsx
client/src/modules/app_status/data/: OnServerStatusChangedEventName.js
client/src/modules/app_status/pages/: Page.jsx
client/src/modules/app_status/style/components/: ServerStatusCircle.scss  ServerStatusModule.scss
client/src/modules/app_status/style/pages/: Page.scss
client/src/modules/app_status/utils/: checkServerStatus.js
client/src/style/: App.scss  variables.scss
client/src/style/components/: Menu.scss  Module.scss  TopBar.scss
client/src/utils/: getScreenSize.js
server/: CMakeLists.txt
server/src/: main.cpp
server/src/network/http/: HTTPServer.cpp  HTTPServer.hpp
server/src/network/websocket/: NativeWebsocketServer.hpp  WebsocketClient.hpp  WebsocketServer.cpp  WebsocketServer.hpp
